Fixed overlay position to absolute and added blurred background

--- a/cookieStyle.css
+++ b/cookieStyle.css
@@ -25,6 +25,20 @@ body {
 
 }
 
+#cookie-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--overlay);
+    backdrop-filter: blur(10px);
+    z-index: 9999; /* Make sure it's above other content */
+}
+
 .cookieBtn {
     background: var(--primary);
     border-color: var(--primary);
@@ -75,7 +89,6 @@ body {
     width: 100%;
     height: 100%;
     position: fixed;
-    background: var(--overlay);
     z-index: 101;
     
 }
